updating docker-compese file for subgoal3

--- a/images/activationBase_BankCustomerChurnPrediction/docker-compose.yml
+++ b/images/activationBase_BankCustomerChurnPrediction/docker-compose.yml
@@ -1,10 +1,11 @@
 version: '3.9'
 
 services:
-  activationBase:
-    image: uafridi/activationBase_BankCustomerChurnPrediction
+  activation_base:
+    #build: .
+    image: uafridi/activationbase_bankcustomerchurnprediction
     volumes:
-      - ai_system:/tmp/activationBase
+      - ai_system:/tmp
 
 volumes:
   ai_system:
