changes in knowledge and code base images folder

--- a/images/codeBase_BankCustomerChurnPrediction_ols/Dockerfile
+++ b/images/codeBase_BankCustomerChurnPrediction_ols/Dockerfile
@@ -28,5 +28,5 @@ COPY ../../code/olsRequests /tmp/codeBase/
 COPY images/codeBase_BankCustomerChurnPrediction_ols/Readme.md /tmp/codeBase/
 
 # Set working directory
-WORKDIR /tmp/codeBase/
+# WORKDIR /tmp/codeBase/
 
