added ols prediction, changed file ext for ols

--- a/images/knowledgeBase_BankCustomerChurnPrediction/Dockerfile
+++ b/images/knowledgeBase_BankCustomerChurnPrediction/Dockerfile
@@ -3,7 +3,7 @@ FROM busybox
 
 # Copy models into the image
 COPY ../../learningBase/ann_model.h5 /tmp/knowledgeBase/currentAiSolution.h5
-COPY ../../learningBaseOLS/ols_model.h5 /tmp/knowledgeBase/currentOlsSolution.h5
+COPY ../../learningBaseOLS/ols_model.pkl /tmp/knowledgeBase/currentOlsSolution.pkl
 
 # Add the README file
 COPY images/knowledgeBase_BankCustomerChurnPrediction/Readme.md /tmp/knowledgeBase/
