dockerFile and docker-compose changes

--- a/images/activationBase_BankCustomerChurnPrediction/Dockerfile
+++ b/images/activationBase_BankCustomerChurnPrediction/Dockerfile
@@ -2,10 +2,10 @@
 FROM busybox
 
 # Copy activation data into the image
-COPY ../../data/customer_churn_dataset/activation_data.csv /tmp/activationBase/
+COPY ../../data/customer_churn_dataset/activation_data.csv /activationBase/
 
 # Add the README file
-COPY images/activationBase_BankCustomerChurnPrediction/Readme.md /tmp/activationBase/
+COPY images/activationBase_BankCustomerChurnPrediction/Readme.md /activationBase/
 
 # Set working directory
-#WORKDIR /tmp/activationBase
+WORKDIR /tmp/activationBase
