--- a/images/codeBase_BankCustomerChurnPrediction_ols/Dockerfile
+++ b/images/codeBase_BankCustomerChurnPrediction_ols/Dockerfile
@@ -16,18 +16,15 @@ RUN pip install --no-cache-dir \
     numpy==1.26.4\
     scikit-learn==1.6.1 \
     matplotlib==3.10.0 \
-    seaborn==0.13.2 \
-    statsmodels==0.14.4 \
+    seaborn==0.13.2\
+    statsmodels==0.14.4\
     scipy==1.12.0
 
 # Copy application code
-COPY ../../code/olsRequests/apply_olsSolution.py /tmp/codeBase/
-COPY ../../code/olsRequests/create_olsSolution.py /tmp/codeBase/
-
+COPY ../../code/olsRequests /codeBase/
 
 # Add the README file
-COPY images/codeBase_BankCustomerChurnPrediction_ols/Readme.md /tmp/codeBase/
+COPY images/codeBase_BankCustomerChurnPrediction_ols/Readme.md /codeBase/
 
 # Set working directory
 WORKDIR /tmp/codeBase/
-
