--- a/images/learningBase_BankCustomerChurnPrediction/Dockerfile
+++ b/images/learningBase_BankCustomerChurnPrediction/Dockerfile
@@ -2,11 +2,11 @@
 FROM busybox
 
 # Copy training and test data into the image
-COPY ../../data/customer_churn_dataset/training_data.csv /tmp/learningBase/train/
-COPY ../../data/customer_churn_dataset/test_data.csv /tmp/learningBase/validation/
+COPY ../../data/customer_churn_dataset/training_data.csv /learningBase/train/
+COPY ../../data/customer_churn_dataset/test_data.csv /learningBase/validation/
 
 # Add the README file
-COPY images/learningBase_BankCustomerChurnPrediction/Readme.md /tmp/learningBase/
+COPY images/learningBase_BankCustomerChurnPrediction/Readme.md /learningBase/
 
 # Set working directory
-#WORKDIR /tmp/learningBase
+WORKDIR /tmp/learningBase
