--- a/images/codeBase_BankCustomerChurnPrediction_ann/docker-compose.yml
+++ b/images/codeBase_BankCustomerChurnPrediction_ann/docker-compose.yml
@@ -6,6 +6,11 @@ services:
     image: uafridi/codebase_bankcustomerchurnprediction_ann
     volumes:
       - ai_system:/tmp
+    command:
+      - sh
+      - "-c"
+      - |
+       rm -rf /tmp/codeBase/ && mkdir -p /tmp/codeBase/ && cp -r /codeBase/ /tmp/;
 
 volumes:
   ai_system:
