--- a/images/knowledgeBase_BankCustomerChurnPrediction/Dockerfile
+++ b/images/knowledgeBase_BankCustomerChurnPrediction/Dockerfile
@@ -2,11 +2,11 @@
 FROM busybox
 
 # Copy models into the image
-COPY ../../learningBase/ann_model.h5 /tmp/knowledgeBase/currentAiSolution.h5
-COPY ../../learningBaseOLS/ols_model.pkl /tmp/knowledgeBase/currentOlsSolution.pkl
+COPY ../../learningBase/ann_model.h5 /knowledgeBase/currentAiSolution.h5
+COPY ../../learningBaseOLS/ols_model.pkl /knowledgeBase/currentOlsSolution.pkl
 
 # Add the README file
-COPY images/knowledgeBase_BankCustomerChurnPrediction/Readme.md /tmp/knowledgeBase/
+COPY images/knowledgeBase_BankCustomerChurnPrediction/Readme.md /knowledgeBase/
 
 # Set working directory
-#WORKDIR /tmp/knowledgeBase
+WORKDIR /tmp/knowledgeBase
