--- a/images/learningBase_BankCustomerChurnPrediction/docker-compose.yml
+++ b/images/learningBase_BankCustomerChurnPrediction/docker-compose.yml
@@ -6,11 +6,11 @@ services:
     image: uafridi/learningbase_bankcustomerchurnprediction
     volumes:
       - ai_system:/tmp
-    #command:
-    #- sh
-    #- "-c"
-    #- |
-    #  rm -rf /tmp/learningBase/ && cp -r /learningBase/ /tmp/
+    command:
+      - sh
+      - "-c"
+      - |
+       rm -rf /tmp/learningBase/ && mkdir -p /tmp/learningBase/ && cp -r /learningBase/ /tmp/;
 
 volumes:
   ai_system:
